--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+## Dependency directory
+## Commenting this out is preferred by some people, see
+## https://docs.npmjs.com/misc/faq#should-i-check-my-node_modules-folder-into-git
+node_modules
+
 *.odt#
 *.dxf~
 \#*.dxf
+
+ecadoc/public
+ecadoc/download
+
+# Book build output
+_book
+
+# eBook build output
+*.epub
+*.mobi
+*.pdf
+
+temp
+artifacts
+
+*.log
