--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "gulp build",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "preversion": "js-yaml .travis.yml",
-    "version": "gulp --gulpfile ./version.js && npm run changelog && git add -A",
+    "version": "npm run changelog && git add -A",
     "postversion": "git push && git push --tags",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
